apps/media/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
  labels:
    app: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      securityContext:
        runAsUser: 0
      volumes:
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: jellyfin-cache
          persistentVolumeClaim:
            claimName: jellyfin-cache
        - name: media
          hostPath:
            path: /mnt/nas/Media
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8096
          volumeMounts:
            - name: jellyfin-config
              mountPath: /config
            - name: jellyfin-cache
              mountPath: /cache
            - name: media
              mountPath: /mnt/nas/Media
